--- a/app/src/main/res/layout/activity_drinks.xml
+++ b/app/src/main/res/layout/activity_drinks.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="19dp"
         android:layout_marginTop="?attr/actionBarSize"
         android:id="@+id/drink_list"
         android:layout_width="match_parent"
@@ -18,17 +20,8 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/cart_list_item" />
 
-    <Button
-        android:background="@color/addToCartEditBg"
-        android:id="@+id/check_out"
-        style="@style/BottomCtaBtn"
-        android:text="Back to home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
-
     <include layout="@layout/toolbar" />
 
+    <include android:id="@+id/buttonProcessDrinks" layout="@layout/btn_process_block" android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
