--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-style="@style/IngredientListItem">
+    android:id="@+id/cartItemContainer"
+style="@style/IngredientListItem"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:clickable="true">
 
     <include
         android:layout_width="wrap_content"
