--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -19,10 +19,10 @@
     android:layout_gravity="end">
 
     <RelativeLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/cartBadge"
-        android:layout_width="17dp"
-        android:layout_height="17dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:background="@drawable/badge_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/toolbarImageBtn"
@@ -33,18 +33,17 @@
             android:id="@+id/cartBadgeItemNum"
             style="@style/CartBadge"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal|center_vertical"
             android:textAppearance="@style/CartBadge"
-            android:layout_margin="2dp"
             tools:text="5" />
     </RelativeLayout>
 
     <ImageButton
         android:visibility="gone"
         android:id="@+id/toolbarImageBtn"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
         android:background="?attr/colorPrimary"
