--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/statusBar</item>
         <!-- Status bar color. -->
+        <item name="colorAccent">@color/mainText</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/statusBar</item>
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
@@ -70,6 +71,9 @@
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingMultiplier">1.14</item>
         <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 
     <style name="IngredientsListTitle" parent="@style/TextAppearance.AppCompat.Subhead">
@@ -100,10 +104,23 @@
         <item name="android:textStyle">bold|italic</item>
     </style>
 
+    <style name="BtnProcess" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingMultiplier">1.25</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/mainText</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_alignParentBottom">true</item>
+    </style>
+
     <style name="CartBadge" parent="@style/TextAppearance.AppCompat.Body1">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:lineSpacingMultiplier">1</item>
     </style>
 
     <style name="ConfirmText" parent="@style/TextAppearance.AppCompat.Body1">
@@ -127,20 +144,34 @@
     </style>
 
     <style name="IngredientCheckBox" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">#010101</item>
-        <item name="colorControlActivated">@color/mainText</item>
+        <item name="android:colorControlNormal">@color/mainText</item>
+        <item name="android:colorControlActivated">@color/mainText</item>
+        <item name="android:colorControlHighlight">@color/mainText</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat</item>
         <item name="android:layout_width">32dp</item>
         <item name="android:layout_height">32dp</item>
     </style>
 
     <style name="BottomCtaBtn" parent="Widget.AppCompat.Button.Borderless">
-        <item name="colorButtonNormal">@color/mainText</item>
+        <item name="android:colorAccent">@color/orderBtn</item>
+        <item name="android:background">@color/orderBtn</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingMultiplier">1.25</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:backgroundTint">@color/orderBtn</item>
+    </style>
+
+    <style name="BottomCheckout" parent="BottomCtaBtn">
+        <item name="android:colorAccent">@color/mainText</item>
+        <item name="android:background">@color/mainText</item>
+        <item name="android:backgroundTint">@color/mainText</item>
     </style>
 
 
