--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -30,6 +30,14 @@
 
     <include layout="@layout/toolbar" />
     <include android:id="@+id/order_success" layout="@layout/checkout_success_block" android:visibility="gone" />
-
+    <ProgressBar
+        android:visibility="gone"
+        android:padding="150dp"
+        android:background="@color/white"
+        android:id="@+id/progressBarCart"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
